Demo doc card overview model

--- a/calico_versioned_docs/version-3.27/networking/index.mdx
+++ b/calico_versioned_docs/version-3.27/networking/index.mdx
@@ -8,38 +8,18 @@ hide_table_of_contents: true
 import DocCardList from '@theme/DocCardList';
 import DocCard from '@theme/DocCard';
 
+Customize Calico networking options to find the best fit your Kubernetes environment.
+
 ## Get started
 
 <DocCardList items={[
   {
     type: 'link',
-    href: 'fips',
+    href: 'determine-best-networking',
     icon: '📄',
-    title: 'Example Document 1',
-    description: 'This is the first example document description.',
-  },
-  {
-    type: 'link',
-    href: '/example2',
-    icon: '📄',
-    title: 'Example Document 2',
-    description: 'This is the second example document description.',
-  },
-  {
-    type: 'category',
-    label: 'Example Category',
-    items: [
-      {
-        type: 'link',
-        href: '/example3',
-        icon: '📄',
-        title: 'Example Document 3',
-        description: 'This is the third example document description.',
-      },
-      // You can add more items to this category if needed
-    ],
-  },
-  // You can add more items to the array if needed
+    label: 'Determine best networking option',
+    description: ' Learn about the different networking options Calico supports so you can choose the best option for your needs.',
+  }
 ]} />
 
 ## Configure networking
@@ -47,31 +27,59 @@ import DocCard from '@theme/DocCard';
 <DocCardList items={[
   {
     type: 'link',
-    href: 'fips',
+    href: 'configuring/bgp',
     icon: '📄',
-    title: 'Example Document 1',
-    description: 'This is the first example document description.',
+    label: 'Configure BGP peering',
+    description: 'Configure BGP peering with full mesh, node-specific peering, ToR, and/or Calico route reflectors.',
   },
   {
     type: 'link',
-    href: '/example2',
+    href: 'configuring/vxlan-ipip',
     icon: '📄',
-    title: 'Example Document 2',
-    description: 'This is the second example document description.',
+    label: 'Overlay networking',
+    description: 'Configure Calico to use IP in IP or VXLAN overlay networking so the underlying network doesn’t need to understand pod addresses.',
   },
   {
-    type: 'category',
-    label: 'Example Category',
-    items: [
-      {
-        type: 'link',
-        href: '/example3',
-        icon: '📄',
-        title: 'Example Document 3',
-        description: 'This is the third example document description.',
-      },
-      // You can add more items to this category if needed
-    ],
+    type: 'link',
+    href: 'configuring/advertise-service-ips',
+    icon: '📄',
+    label: 'Advertise Kubernetes service IP addresses',
+    description: ' Configure Calico to advertise Kubernetes service cluster IPs and external IPs outside the cluster using BGP.',
+  },
+  {
+    type: 'link',
+    href: 'configuring/mtu',
+    icon: '📄',
+    label: 'Configure MTU to maximize network performance',
+    description: 'Optimize network performance for workloads by configuring the MTU in Calico to best suit your underlying network.',
+  },
+  {
+    type: 'link',
+    href: 'configuring/advertise-service-ips',
+    icon: '📄',
+    label: 'Advertise Kubernetes service IP addresses',
+    description: 'Configure Calico to advertise Kubernetes service cluster IPs and external IPs outside the cluster using BGP.',
+  },
+  {
+    type: 'link',
+    href: 'configuring/workloads-outside-cluster',
+    icon: '📄',
+    label: 'Configure outgoing NAT',
+    description: 'Configure networking to perform outbound NAT for connections from pods to outside of the cluster.',
+  },
+  {
+    type: 'link',
+    href: 'configuring/use-ipvs',
+    icon: '📄',
+    label: 'Use IPVS kube-proxy',
+    description: 'Use IPVS kube-proxy for performance improvements.',
+  },
+  {
+    type: 'link',
+    href: 'configuring/sidecar-acceleration',
+    icon: '📄',
+    label: 'Accelerate Istio network performance',
+    description: 'Use Calico to accelerate network performance of traffic through the Istio Envoy sidecar using eBPF.',
   },
   // You can add more items to the array if needed
 ]} />
@@ -81,32 +89,18 @@ import DocCard from '@theme/DocCard';
 <DocCardList items={[
   {
     type: 'link',
-    href: 'fips',
+    href: 'ipam/get-started-ip-address',
     icon: '📄',
-    title: 'Example Document 1',
-    description: 'This is the first example document description.',
+    label: 'Get started with IP address management',
+    description:  'Configure Calico to use Calico IPAM or host-local IPAM, and when to use one or the other.',
   },
   {
     type: 'link',
-    href: '/example2',
+    href: 'ipam/ip-autodetection',
     icon: '📄',
-    title: 'Example Document 2',
-    description: 'This is the second example document description.',
-  },
-  {
-    type: 'category',
-    label: 'Example Category',
-    items: [
-      {
-        type: 'link',
-        href: '/example3',
-        icon: '📄',
-        title: 'Example Document 3',
-        description: 'This is the third example document description.',
-      },
-      // You can add more items to this category if needed
-    ],
-  },
+    label: 'Configure IP autodetection',
+    description: 'Calico IP autodetection ensures the correct IP address is used for routing. Learn how to customize it.',
+  }
   // You can add more items to the array if needed
 ]} />
 
@@ -115,32 +109,18 @@ import DocCard from '@theme/DocCard';
 <DocCardList items={[
   {
     type: 'link',
-    href: 'fips',
+    href: 'determine-best-networking',
     icon: '📄',
-    title: 'Example Document 1',
+    label: 'Example Document 1',
     description: 'This is the first example document description.',
   },
   {
     type: 'link',
-    href: '/example2',
+    href: 'determine-best-networking',
     icon: '📄',
-    title: 'Example Document 2',
+    label: 'Example Document 2',
     description: 'This is the second example document description.',
-  },
-  {
-    type: 'category',
-    label: 'Example Category',
-    items: [
-      {
-        type: 'link',
-        href: '/example3',
-        icon: '📄',
-        title: 'Example Document 3',
-        description: 'This is the third example document description.',
-      },
-      // You can add more items to this category if needed
-    ],
-  },
+  }
   // You can add more items to the array if needed
 ]} />
 
