--- a/calico-enterprise_versioned_docs/version-3.17/reference/resources/overview.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/reference/resources/overview.mdx
@@ -49,6 +49,7 @@ The following resources are supported:
 - [BGPConfiguration](bgpconfig.mdx)
 - [BGPPeer](bgppeer.mdx)
 - [DeepPacketInspection](deeppacketinspection.mdx)
+- [EgressGatewayPolicy](egressgatewaypolicy.mdx)
 - [FelixConfiguration](felixconfig.mdx)
 - [GlobalAlert](globalalert.mdx)
 - [GlobalNetworkPolicy](globalnetworkpolicy.mdx)
