--- a/calico-enterprise_versioned_docs/version-3.18/getting-started/install-on-clusters/kubernetes/helm.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/getting-started/install-on-clusters/kubernetes/helm.mdx
@@ -88,7 +88,7 @@ To install a standard {{prodname}} cluster with Helm:
 --set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-operator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
 --set-file licenseKeyContent=<path/to/license/file/yaml> \\
 --namespace tigera-operator --create-namespace`
-       : `helm install {{prodnamedash}} tigera/tigera-operator --version tigera-operator-{{chart_version_name}}.tgz \\
+       : `helm install {{prodnamedash}} tigera-operator-{{chart_version_name}}.tgz \\
 --set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-operator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
 --set-file licenseKeyContent=<path/to/license/file/yaml> \\
 --namespace tigera-operator --create-namespace`}
@@ -102,7 +102,7 @@ To install a standard {{prodname}} cluster with Helm:
 --set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-operator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
 --set-file licenseKeyContent=<path/to/license/file/yaml> \\
 --namespace tigera-operator --create-namespace`
-       : `helm install {{prodnamedash}} tigera/tigera-operator --version tigera-operator-{{chart_version_name}} -f values.yaml \\
+       : `helm install {{prodnamedash}} tigera-operator-{{chart_version_name}}.tgz -f values.yaml \\
 --set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-operator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
 --set-file licenseKeyContent=<path/to/license/file/yaml> \\
 --namespace tigera-operator --create-namespace`}
