--- a/calico/reference/configure-resources.mdx
+++ b/calico/reference/configure-resources.mdx
@@ -18,10 +18,10 @@ The [APIServer](../reference/installation/api.mdx#operator.tigera.io/v1.APIServe
 
 ### APIServerDeployment
 
-To configure resource specification for the [APIServerDeployment](../reference/installation/api.mdx#operator.tigera.io/v1.APIServerDeployment), patch the installation CR using the below command:
+To configure resource specification for the [APIServerDeployment](../reference/installation/api.mdx#operator.tigera.io/v1.APIServerDeployment), patch the APIServer CR using the below command:
 
 ```bash
-kubectl patch apiserver tigera-secure  --type=merge --patch='{"spec": {"apiServerDeployment":{"spec": {"template": {"spec": {"containers":[{"name":"calico-apiserver","resources":{"limits":{"cpu":"1", "memory":"1000Mi"},"requests":{"cpu":"100m", "memory":"100Mi"}}},{"name":"tigera-queryserver","resources":{"limits":{"cpu":"1", "memory":"1000Mi"},"requests":{"cpu":"100m", "memory":"100Mi"}}}]}}}}}}'
+kubectl patch apiserver default  --type=merge --patch='{"spec": {"apiServerDeployment":{"spec": {"template": {"spec": {"containers":[{"name":"calico-apiserver","resources":{"limits":{"cpu":"1", "memory":"1000Mi"},"requests":{"cpu":"100m", "memory":"100Mi"}}},{"name":"tigera-queryserver","resources":{"limits":{"cpu":"1", "memory":"1000Mi"},"requests":{"cpu":"100m", "memory":"100Mi"}}}]}}}}}}'
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
@@ -30,7 +30,7 @@ This command sets the CPU request to 100 milliCPU (mCPU) and the memory request 
 You can verify the configured resources using the following command:
 
 ```bash
-kubectl get deployment.apps/tigera-apiserver -n tigera-system -o json | jq '.spec.template.spec.containers[] | {name: .name, resources: .resources}'
+kubectl get deployment.apps/calico-apiserver -n calico-apiserver -o json | jq '.spec.template.spec.containers[] | {name: .name, resources: .resources}'
 ```
 
 This command will output the configured resource requests and limits for the Calico APIServerDeployment component in JSON format.
@@ -38,19 +38,6 @@ This command will output the configured resource requests and limits for the Cal
 ```bash
 {
   "name": "calico-apiserver",
-  "resources": {
-    "limits": {
-      "cpu": "1",
-      "memory": "1000Mi"
-    },
-    "requests": {
-      "cpu": "100m",
-      "memory": "100Mi"
-    }
-  }
-}
-{
-  "name": "tigera-queryserver",
   "resources": {
     "limits": {
       "cpu": "1",
@@ -76,7 +63,7 @@ Example Configurations:
 To configure resource specification for the [TyphaDeployment](../reference/installation/api.mdx#operator.tigera.io/v1.TyphaDeployment), patch the installation CR using the below command:
 
 ```bash
-kubectl patch installations default --type=merge --patch='{"spec": {"typhaDeployment": {"spec": {"template": {"spec": {"containers": [{"name": "calico-typha", "resources": {"requests": {"cpu": "100m", "memory": "100Mi"}, "limits": {"cpu": "1", "memory": "1000Mi"}}]}}}}}}'
+kubectl patch installations default --type=merge --patch='{"spec": {"typhaDeployment": {"spec": {"template": {"spec": {"containers": [{"name": "calico-typha", "resources": {"requests": {"cpu": "100m", "memory": "100Mi"}, "limits": {"cpu": "1", "memory": "1000Mi"}}}]}}}}}}'
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
