--- a/calico-enterprise/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm.mdx
+++ b/calico-enterprise/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm.mdx
@@ -103,7 +103,14 @@ These steps differ based on your cluster type. If you are unsure of your cluster
     }
   </CodeBlock>
 
-1. You can monitor progress with the following command:
+  :::note
+
+  If you previously upgraded from open source to enterprise, your installation name will be `calico`. Substitute the command
+  above with `helm upgrade calico ...` instead.
+
+  :::
+
+  1. You can monitor progress with the following command:
 
   ```bash
    watch kubectl get tigerastatus
