Update outdated node-role taints

--- a/calico-enterprise/getting-started/install-on-clusters/kubernetes/quickstart.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/kubernetes/quickstart.mdx
@@ -80,7 +80,7 @@ A Linux host that meets the following requirements.
 1. Remove the taint from the control plane to allow Kubernetes to schedule pods on the control plane node.
 
    ```bash
-   kubectl taint nodes --all node-role.kubernetes.io/master-
+   kubectl taint nodes --all node-role.kubernetes.io/control-plane-
    ```
 
 ### Install {{prodname}}
