--- a/calico-cloud_versioned_docs/version-19-1/get-started/upgrade-cluster.mdx
+++ b/calico-cloud_versioned_docs/version-19-1/get-started/upgrade-cluster.mdx
@@ -6,6 +6,8 @@ description: Steps to upgrade to the latest version of Calico Cloud.
 
 To upgrade managed clusters to the latest version of {{prodname}}:
 
+**Clusters that were installed by generating the installation command in the UI must be upgraded in the same manner**
+
 1. In Manager UI, go to **Managed Clusters**.
 1. For the cluster you want to upgrade, select **Actions** > **Reinstall**.
 1. Select the version of {{prodname}} you want to install, you can select the currently installed version, or any newer supported version
@@ -13,3 +15,13 @@ To upgrade managed clusters to the latest version of {{prodname}}:
 
 ![reinstall](/img/calico-cloud/managed-clusters-reinstall.png)
 ![reinstall-step1](/img/calico-cloud/managed-clusters-reinstall-step1.png)
+
+
+**Cluster that were installed using automation workflows can be upgraded by replacing the version in the {{prodname}} Installer manifest**
+
+The exact steps will depend on your workflows, the following shows how to upgrade the version using `kubectl`:
+```shell
+kubectl -n calico-cloud patch installer default --type=json \
+  -p '[{"op": "replace", "path": "/spec/calicoCloudVersion", "value": "v19.2.0"}]'
+```
+
