--- a/calico-enterprise/getting-started/install-on-clusters/aks.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/aks.mdx
@@ -18,7 +18,7 @@ Install {{prodname}} on an AKS managed Kubernetes cluster.
 
   <GeekDetails
     prodname='{{prodname}}'
-    details='Policy:Calico,IPAM:Calico,CNI:Calico,Overlay:IPIP,Routing:BGP,Datastore:Kubernetes'
+    details='Policy:Calico,IPAM:Calico,CNI:Calico,Overlay:VXLAN,Routing:Calico,Datastore:Kubernetes'
   />
 
 - Azure CNI networking with {{prodname}} network policy
