Incorporating Minor alignment suggestion

--- a/calico/reference/configure-resources.mdx
+++ b/calico/reference/configure-resources.mdx
@@ -254,11 +254,11 @@ The provided example illustrates configuring the apiserver component. Follow a s
 :::
 
 
-## APIServer custom resource
+### APIServer custom resource
 
 The [APIServer](../reference/installation/api.mdx#operator.tigera.io/v1.APIServer) CR provides a way to configure APIServerDeployment. The following sections provide example values.yaml for apiserver component.
 
-### APIServerDeployment
+#### APIServerDeployment
 
 To configure resource specification for the [APIServerDeployment](../reference/installation/api.mdx#operator.tigera.io/v1.APIServerDeployment), update values.yaml with the appropriate resource values.
 
