Fixes to prepare for d3 upgrade

--- a/calico-enterprise/getting-started/install-on-clusters/windows-calico/manual-install/kubeconfig.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/windows-calico/manual-install/kubeconfig.mdx
@@ -6,7 +6,7 @@ description: Configure kubeconfig for the manual install of Calico Enterprise fo
 
 :::note
 
-The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](../operator.mdx#install-{{prodnamedashWindows}}-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
+The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](../operator.mdx#install-calico-enterprise-for-windows-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
 
 :::
 
