--- a/calico/getting-started/kubernetes/windows-calico/operator.mdx
+++ b/calico/getting-started/kubernetes/windows-calico/operator.mdx
@@ -24,7 +24,7 @@ Before beginning, setup a {{prodname}} cluster on Linux nodes and provision Wind
 ## How to
 
 - [Configure strict affinity for clusters using {{prodname}} networking](#configure-strict-affinity-for-clusters-using-calico-networking)
-- [Install {{prodnameWindows}} using the operator](#install-{{prodnamedashWindows}}-using-the-operator)
+- [Install {{prodnameWindows}} using the operator](#install-calico-for-windows-using-the-operator)
 
 ### Configure strict affinity for clusters using {{prodname}} networking
 
