--- a/calico/getting-started/kubernetes/windows-calico/requirements.mdx
+++ b/calico/getting-started/kubernetes/windows-calico/requirements.mdx
@@ -100,7 +100,7 @@ The {{prodnameWindows}} standard manual installation is distributed as a **.zip 
 
 :::note
 
-The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](operator.mdx#install-{{prodnamedashWindows}}-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
+The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](operator.mdx#install-calico-for-windows-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
 
 :::
 
