--- a/calico-cloud/operations/ebpf/enabling-ebpf.mdx
+++ b/calico-cloud/operations/ebpf/enabling-ebpf.mdx
@@ -73,7 +73,7 @@ If you must use an overlay, we recommend that you use VXLAN, not IPIP. VXLAN has
 ## How to
 
 - [Verify that your cluster is ready for eBPF mode](#verify-that-your-cluster-is-ready-for-ebpf-mode)
-- [Configure {{prodname}} to talk directly to the API server](#configure-{{prodnamedash}}-to-talk-directly-to-the-api-server)
+- [Configure {{prodname}} to talk directly to the API server](#configure-calico-cloud-to-talk-directly-to-the-api-server)
 - [Configure kube-proxy](#configure-kube-proxy)
 - [Enable eBPF mode](#enable-ebpf-mode)
 - [Try out DSR mode](#try-out-dsr-mode)
