--- a/calico-enterprise_versioned_docs/version-3.17/getting-started/install-on-clusters/aks.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/getting-started/install-on-clusters/aks.mdx
@@ -55,7 +55,7 @@ Install {{prodname}} on an AKS managed Kubernetes cluster.
 - [Install kubectl](https://kubernetes.io/docs/tasks/tools/install-kubectl/)
 
 1. [Option A: Install with Azure CNI networking](#install-with-azure-cni-networking)
-1. [Option B: Install with Calico networking](#install-with-{{prodnamedash}}-networking)
+1. [Option B: Install with Calico networking](#install-with-calico-enterprise-networking)
 1. [Install the {{prodname}} license](#install-the-calico-enterprise-license)
 
 <InstallAKS clusterType='standalone' />
