--- a/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/windows-calico/manual-install/quickstart.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/getting-started/install-on-clusters/windows-calico/manual-install/quickstart.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 
 :::note
 
-The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](../operator.mdx#install-{{prodnamedashWindows}}-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
+The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](../operator.mdx#install-calico-enterprise-for-windows-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
 
 :::
 
@@ -30,7 +30,7 @@ Before beginning the quickstart, setup a {{prodname}} cluster on Linux nodes and
 ## How to
 
 - [Configure strict affinity for clusters using {{prodname}} networking](#configure-strict-affinity-for-clusters-using-calico-enterprise-networking)
-- [Install {{prodnameWindows}} manually](#install-{{prodnamedashWindows}}-manually)
+- [Install {{prodnameWindows}} manually](#install-calico-enterprise-for-windows-manually)
 - [Configure installation parameters](#configure-installation-parameters)
 
 ### Configure strict affinity for clusters using {{prodname}} networking
