--- a/calico-enterprise_versioned_docs/version-3.19-1/getting-started/install-on-clusters/windows-calico/manual-install/maintain.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/getting-started/install-on-clusters/windows-calico/manual-install/maintain.mdx
@@ -6,7 +6,7 @@ description: Tasks to manage Calico services and uninstall Calico Enterprise for
 
 :::note
 
-The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](../operator.mdx#install-{{prodnamedashWindows}}-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
+The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](../operator.mdx#install-calico-enterprise-for-windows-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
 
 :::
 
