--- a/calico-enterprise_versioned_docs/version-3.19-1/getting-started/install-on-clusters/windows-calico/operator.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/getting-started/install-on-clusters/windows-calico/operator.mdx
@@ -26,7 +26,7 @@ Before beginning, setup a {{prodname}} cluster on Linux nodes and provision Wind
 ## How to
 
 - [Configure strict affinity for clusters using {{prodname}} networking](#configure-strict-affinity-for-clusters-using-calico-networking)
-- [Install {{prodnameWindows}} using the operator](#install-{{prodnamedashWindows}}-using-the-operator)
+- [Install {{prodnameWindows}} using the operator](#install-calico-enterprise-for-windows-using-the-operator)
 
 ### Configure strict affinity for clusters using {{prodname}} networking
 
