--- a/calico-enterprise_versioned_docs/version-3.19-1/operations/monitor/metrics/policy-metrics.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/operations/monitor/metrics/policy-metrics.mdx
@@ -135,7 +135,7 @@ sum(irate(cnx_policy_rule_packets[30s])) without (instance,rule_index,rule_direc
 ```
 
 See the
-[Felix configuration reference](../../../reference/component-resources/node/felix/configuration.mdx#{{prodnamedash}}-specific-configuration) for
+[Felix configuration reference](../../../reference/component-resources/node/felix/configuration.mdx#calico-enterprise-specific-configuration) for
 the settings that control the reporting of these metrics. {{prodname}} manifests
 normally set `PrometheusReporterEnabled=true` and
 `PrometheusReporterPort=9081`, so these metrics are available on each compute
