--- a/calico_versioned_docs/version-3.27/getting-started/kubernetes/windows-calico/manual-install/openshift-installation.mdx
+++ b/calico_versioned_docs/version-3.27/getting-started/kubernetes/windows-calico/manual-install/openshift-installation.mdx
@@ -12,7 +12,7 @@ Currently, {{prodnameWindows}} supports Openshift versions only up to v4.5 becau
 
 :::note
 
-The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](../operator.mdx#install-{{prodnamedashWindows}}-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
+The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](../operator.mdx#install-calico-for-windows-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
 
 :::
 
